# ccr

./: .antigravityignore  .ccs_config.toml.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  README_CN.md  ccmate-usage-analytics.md  dev-env.sh  justfile
.cargo/: config.toml
ccr-tauri/: .gitignore  BUILD.md  Cargo.toml  README.md  WEB_DEBUG_MODE.md  Web调试模式使用说明.md  dev-server.sh  dev-wsl.sh  justfile  tauri.conf.json  开发模式选择指南.txt  最终解决方案.md
ccr-types/: Cargo.toml
ccr-types/src/: claude_settings.rs  codex_auth.rs  lib.rs
ccr-ui/: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  README_CN.md  (+2 more)
ccr-ui/backend/: API_FIX.md  CLAUDE.md  Cargo.toml  REFACTORING_ROLLBACK_SUMMARY.md  benchmark.ps1  benchmark.sh  create_routes.py  test_droid_api.sh
ccr-ui/backend/examples/: settings.example.json
ccr-ui/backend/src/: claude_config_manager.rs  codex_config_manager.rs  codex_models.rs  config_converter.rs  config_reader.rs  converter_models.rs  errors.rs  gemini_config_manager.rs  gemini_models.rs  main.rs  markdown_manager.rs  models.rs  platform_config_manager.rs  plugins_manager.rs  qwen_config_manager.rs  qwen_models.rs  settings_manager.rs
ccr-ui/backend/src/api/: mod.rs
ccr-ui/backend/src/api/handlers/: agents.rs  budget.rs  builtin_prompts.rs  checkin.rs  claude_settings.rs  command.rs  config.rs  converter.rs  hooks.rs  logs.rs  marketplace.rs  mcp.rs  mcp_presets.rs  mod.rs  output_styles.rs  platform.rs  plugins.rs  pricing.rs  prompts.rs  response.rs  skill_hub.rs  skills.rs  slash_commands.rs  stats.rs  statusline.rs  sync.rs  system.rs  ui_state.rs  usage.rs  version.rs
ccr-ui/backend/src/cache/: mod.rs
ccr-ui/backend/src/core/: bom_writer.rs  crypto.rs  error.rs  executor.rs  log_manager.rs  mod.rs
ccr-ui/backend/src/database/: migrations.rs  mod.rs  pool.rs  schema.rs
ccr-ui/backend/src/database/repositories/: checkin_repo.rs  log_repo.rs  mod.rs  ui_state_repo.rs  usage_repo.rs
ccr-ui/backend/src/executor/: mod.rs
ccr-ui/backend/src/handlers/: agents.rs  codex.rs  command.rs  config.rs  converter.rs  gemini.rs  iflow.rs  mcp.rs  mod.rs  platform.rs  plugins.rs  qwen.rs  slash_commands.rs  stats.rs  sync.rs  system.rs  version.rs
ccr-ui/backend/src/handlers/claude/: agents.rs  mcp.rs  mod.rs  plugins.rs  slash_commands.rs
ccr-ui/backend/src/managers/: droid_markdown_manager.rs  droid_plugins_manager.rs  droids_manager.rs  markdown_manager.rs  mod.rs  plugins_manager.rs  settings_manager.rs  skills_manager.rs  ui_state_manager.rs
ccr-ui/backend/src/managers/checkin/: account_manager.rs  balance_manager.rs  builtin_providers.rs  export_manager.rs  mod.rs  provider_manager.rs  record_manager.rs  waf_cookie_manager.rs
ccr-ui/backend/src/managers/config/: claude_manager.rs  codex_manager.rs  droid_manager.rs  gemini_manager.rs  mod.rs  platform_manager.rs  qwen_manager.rs
ccr-ui/backend/src/models/: api.rs  mod.rs  monitoring.rs  skill.rs  ui_state.rs  usage.rs
ccr-ui/backend/src/models/checkin/: account.rs  balance.rs  dashboard.rs  export.rs  mod.rs  provider.rs  record.rs
ccr-ui/backend/src/routes/: agents_routes.rs  budget_routes.rs  builtin_prompts_routes.rs  checkin_routes.rs  claude_settings_routes.rs  codex_routes.rs  command_routes.rs  config_routes.rs  converter_routes.rs  droid_routes.rs  gemini_routes.rs  hooks_routes.rs  iflow_routes.rs  marketplace_routes.rs  mcp_routes.rs  mod.rs  other_routes.rs  output_styles_routes.rs  platform_routes.rs  plugins_routes.rs  pricing_routes.rs  prompts_routes.rs  provider_health_routes.rs  qwen_routes.rs  sessions_routes.rs  skill_hub_routes.rs  skills_routes.rs  slash_commands_routes.rs  stats_routes.rs  statusline_routes.rs  sync_routes.rs  system_routes.rs  ui_state_routes.rs  usage_routes.rs  version_routes.rs
ccr-ui/backend/src/services/: cdk_service.rs  cf_bypass.rs  checkin_service.rs  commands.rs  converter_service.rs  log_persistence.rs  mod.rs  usage_import_service.rs  waf_bypass.rs  websocket.rs
ccr-ui/backend/src/state/: mod.rs
ccr-ui/backend/src/utils/: config_reader.rs  mod.rs
ccr-ui/backend/tests/: log_manager_tests.rs
(+938 files in other folders)
