[package]
name = "ccr-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Yonghang Li"]
description = "Shared type definitions for CCR ecosystem"
license = "MIT"
repository = "https://github.com/bahayonghang/ccr"
keywords = ["ccr", "types", "shared"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
