[package]
name = "ccr-ui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# System information
whoami = "1.5"
num_cpus = "1.16"
sysinfo = "0.32"

# Config file parsing
toml = "0.9"
dirs = "6.0"

# HTTP client for checking updates
reqwest = { version = "0.12", features = ["json"] }

