[package]
name = "ccr-ui-backend"
version = "2.3.3"
edition = "2024"

[dependencies]
# Web framework (Axum + Tower ecosystem)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-full", "request-id", "util"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# System information
whoami = "1.5"
num_cpus = "1.16"
sysinfo = "0.32"

# Config file parsing
toml = "0.9"
dirs = "6.0"

# HTTP client for checking updates
reqwest = { version = "0.12", features = ["json"] }

# Atomic file operations
tempfile = "3.10"
serde_yaml = "0.9"

